--- a/discover/index.html
+++ b/discover/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>DevLinks</title>
 </head>
 <body>
-    
+    <div id="container">
+        <div class="profile">
+            <img src="/discover/assets/avatar.png" alt="">
+        </div>
+    </div>
 </body>
 </html>
