--- a/discover/index.html
+++ b/discover/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <title>DevLinks</title>
 </head>
 <body>
     <div id="container">
         <div class="profile">
             <img src="/discover/assets/avatar.png" alt="">
+            <p>@maylbrito</p>
         </div>
     </div>
 </body>
