--- a/discover/index.html
+++ b/discover/index.html
@@ -15,6 +15,9 @@
             <img src="/discover/assets/avatar.png" alt="">
             <p>@maykbrito</p>
         </div>
+
+        <div id="switch"></div>
+
         <ul>
             <li>
                 <a href="#">Inscreva-se no NLW</a>
