--- a/discover/index.html
+++ b/discover/index.html
@@ -16,7 +16,10 @@
             <p>@maykbrito</p>
         </div>
 
-        <div id="switch"></div>
+        <div id="switch">
+            <button></button>
+            <span></span>
+        </div>
 
         <ul>
             <li>
