--- a/discover/index.html
+++ b/discover/index.html
@@ -16,7 +16,7 @@
             <p>@maykbrito</p>
         </div>
 
-        <div id="switch">
+        <div id="switch" onclick="toggleMode()">
             <button></button>
             <span></span>
         </div>
@@ -55,5 +55,6 @@
     </div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
