--- a/discover/index.html
+++ b/discover/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="container">
         <div class="profile">
-            <img src="./discover/assets/avatar-light.png" alt="">
+            <img src="../discover/assets/avatar-light.png" alt="">
             <p>@maykbrito</p>
         </div>
 
