--- a/discover/index.html
+++ b/discover/index.html
@@ -52,9 +52,9 @@
         </div>
 
         <footer>
-            Feito com ♥ pela <a href="#" target="_blank">Rocketseat</a>
+            Feito com ♥ pela <a href="https://www.rocketseat.com.br" target="_blank">Rocketseat</a>
         </footer>
-        
+
     </div>
 
     <!-- ----------------------------------------- -->
