--- a/discover/index.html
+++ b/discover/index.html
@@ -32,7 +32,7 @@
                 <a href="#" target="_blank">Ver meu portfólio</a>
             </li>
             <li>
-                <a href="#" target="_blank">Conheça o Explorer</a>
+                <a href="https://www.rocketseat.com.br/explorer" target="_blank">Conheça o Explorer</a>
             </li>
         </ul>
 
