--- a/desafios/social-tree/index.html
+++ b/desafios/social-tree/index.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Social Tree</title>
 </head>
@@ -37,27 +38,27 @@
             <ul>
                 <li>
                     <a href="#" target="_blank">
-                        <img src="../social-tree/assets/github.svg" alt="">
+                        <i class="bi bi-github"></i>
                     </a>
                 </li>
                 <li>
                     <a href="#" target="_blank">
-                        <img src="../social-tree/assets/instagram.svg" alt="">
+                        <i class="bi bi-instagram"></i>
                     </a>
                 </li>
                 <li>
                     <a href="#" target="_blank">
-                        <img src="../social-tree/assets/linkedin.svg" alt="">
+                        <i class="bi bi-linkedin"></i>
                     </a>
                 </li>
                 <li>
                     <a href="#" target="_blank">
-                        <img src="../social-tree/assets/twitch.svg" alt="">
+                        <i class="bi bi-twitch"></i>
                     </a>
                 </li>
                 <li>
                     <a href="#" target="_blank">
-                        <img src="../social-tree/assets/twitter.svg" alt="">
+                        <i class="bi bi-twitter"></i>
                     </a>
                 </li>
             </ul>
