--- a/desafios/social-tree/index.html
+++ b/desafios/social-tree/index.html
@@ -21,16 +21,16 @@
         <div class="link-list">
             <ul>
                 <li>
-                    <a href="#" target="_blank">LINK-1</a>
+                    <a href="#" target="_blank">Youtube</a>
                 </li>
                 <li>
-                    <a href="#" target="_blank">LINK-2</a>
+                    <a href="#" target="_blank">Discord</a>
                 </li>
                 <li>
-                    <a href="#" target="_blank">LINK-3</a>
+                    <a href="#" target="_blank">SuperFans</a>
                 </li>
                 <li>
-                    <a href="#" target="_blank">LINK-4</a>
+                    <a href="#" target="_blank">Portfólio</a>
                 </li>
             </ul>
         </div>
@@ -64,7 +64,7 @@
             </ul>
         </div>
         <footer>
-            <p>Desenvolvido por <a href="#">BLACK</a></p>
+            Desenvolvido por <a href="#">BLACK</a>
         </footer>
     </section>
 </body>
