--- a/desafios/portfolio/index.html
+++ b/desafios/portfolio/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <title>Portfolio</title>
 </head>
 <body>
@@ -64,13 +65,41 @@
         </div>
         <div class="sider-tech">
             <h2>Tecnologias</h2>
-            <!-- <div>
-                <p>HTML</p>
-                <p>CSS</p>
-                <p>JAVASCRIPT</p>
-            </div> -->
+            <div>
+                <h3>Estudando</h3>
+                <div class="estud">
+                    <p>HTML</p>
+                    <p>CSS</p>
+                </div>
+                <h3>Interesse</h3>
+                <div class="inter">
+                    <p>JAVASCRIPT</p>
+                </div>
+            </div>
         </div>
-        <div class="sider-expe">expe</div>
+        <div class="sider-expe">
+            <h2>Experiências</h2>
+            <div>
+                <ul>
+                    <li>
+                        <h4>Empresa 1</h4>
+                        <p>2023 - Atualmente</p>
+                    </li>
+                    <li>
+                        <h4>Empresa 2</h4>
+                        <p>2022 - 2022</p>
+                    </li>
+                    <li>
+                        <h4>Empresa 3</h4>
+                        <p>2021 - 2022</p>
+                    </li>
+                    <li>
+                        <h4>Empresa 4</h4>
+                        <p>2020 - 2021</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
         <div class="sider-educ">educ</div>
 
         <!-- --------------------------------- -->
