--- a/desafios/portfolio/index.html
+++ b/desafios/portfolio/index.html
@@ -66,12 +66,12 @@
         <div class="sider-tech">
             <h2>Tecnologias</h2>
             <div>
-                <h3>Estudando</h3>
+                <h3>Experiência</h3>
                 <div class="estud">
                     <p>HTML</p>
                     <p>CSS</p>
                 </div>
-                <h3>Interesse</h3>
+                <h3>Estudando</h3>
                 <div class="inter">
                     <p>JAVASCRIPT</p>
                 </div>
@@ -100,7 +100,28 @@
                 </ul>
             </div>
         </div>
-        <div class="sider-educ">educ</div>
+        <div class="sider-educ">
+            <h2>Educação</h2>
+            <div>
+                <ul>
+                    <li>
+                        <h4>Rocketseat</h4>
+                        <p>2023 - Atualmente</p>
+                        <h5>Discover</h5>
+                    </li>
+                    <li>
+                        <h4>Origamid</h4>
+                        <p>2023 - 2023</p>
+                        <h5>Flex Box e Grid Layout</h5>
+                    </li>
+                    <li>
+                        <h4>Curso em Vídeo</h4>
+                        <p>2023 - 2023</p>
+                        <h5>HTML - CSS</h5>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
         <!-- --------------------------------- -->
 
