--- a/desafios/portfolio/index.html
+++ b/desafios/portfolio/index.html
@@ -147,18 +147,65 @@
                 </div>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur odio nam quia aut nihil recusandae molestias vitae, unde sit?</p>
                 <div class="icon-item">
+                    <i title="Favorito" class="bi bi-star"></i>
+                    <p>100</p>
+                    <i class="bi bi-git"></i>
+                    <p>100</p>
+                </div>
+                <div class="tecno">
+                    <p class="tec-p-1">HTML</p>
+                    <p class="tec-p-2">CSS</p>
+                    <p class="tec-p-3">Javascript</p>
+                </div>
+            </a>
+            <a href="#" class="projects-md">
+                <div class="folder-pro">
+                    <i class="bi bi-folder"></i>
+                    <h3>second-project</h3>
+                </div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur odio nam quia aut nihil recusandae molestias vitae, unde sit?</p>
+                <div class="icon-item">
                     <i class="bi bi-star"></i>
                     <p>100</p>
                     <i class="bi bi-git"></i>
                     <p>100</p>
                 </div>
                 <div class="tecno">
-                    <p>Javascript</p>
+                    <p class="tec-p-3">Javascript</p>
                 </div>
             </a>
-            <!-- <div class="projects-md">Projeto 2</div>
-            <div class="projects-md">Projeto 3</div>
-            <div class="projects-md">Projeto 4</div> -->
+            <a href="#" class="projects-md">
+                <div class="folder-pro">
+                    <i class="bi bi-folder"></i>
+                    <h3>third-project</h3>
+                </div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur odio nam quia aut nihil recusandae molestias vitae, unde sit?</p>
+                <div class="icon-item">
+                    <i class="bi bi-star"></i>
+                    <p>100</p>
+                    <i class="bi bi-git"></i>
+                    <p>100</p>
+                </div>
+                <div class="tecno">
+                    <p class="tec-p-3">Javascript</p>
+                </div>
+            </a>
+            <a href="#" class="projects-md">
+                <div class="folder-pro">
+                    <i class="bi bi-folder"></i>
+                    <h3>fourth-project</h3>
+                </div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur odio nam quia aut nihil recusandae molestias vitae, unde sit?</p>
+                <div class="icon-item">
+                    <i class="bi bi-star"></i>
+                    <p>100</p>
+                    <i class="bi bi-git"></i>
+                    <p>100</p>
+                </div>
+                <div class="tecno">
+                    <p class="tec-p-3">Javascript</p>
+                </div>
+            </a>
         </div>
 
         <!-- --------------------------------- -->
