--- a/desafios/portfolio/index.html
+++ b/desafios/portfolio/index.html
@@ -246,6 +246,8 @@
         <!-- <div class="post-001">Post-1</div> -->
         <!-- <div class="post-002">Post-2</div> -->
     </main>
-    <footer></footer>
+    <footer>
+        Desenvolvido por <a href="#">BLACK</a>
+    </footer>
 </body>
 </html>
